feat: implement ext_idle_notify_v1
This upstream protocol replaces the KDE idle protocol, which we also keep
supporting for a bit.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SERVER_LIB_SRCS
   drm_lease_v1.cpp
   fake_input.cpp
   filtered_display.cpp
+  idle_notify_v1.cpp
   idle_inhibit_v1.cpp
   input_method_v2.cpp
   kde_idle.cpp
@@ -188,6 +189,11 @@ ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
 )
 
 ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
+  PROTOCOL ${WaylandProtocols_DATADIR}/staging/ext-idle-notify/ext-idle-notify-v1.xml
+  BASENAME ext-idle-notify-v1
+)
+
+ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
   PROTOCOL ${WaylandProtocols_DATADIR}/unstable/idle-inhibit/idle-inhibit-unstable-v1.xml
   BASENAME idle-inhibit-unstable-v1
 )
@@ -272,6 +278,7 @@ set(SERVER_GENERATED_SRCS
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-dpms-server-protocol.h
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-drm-lease-v1-client-protocol.h
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-drm-lease-v1-server-protocol.h
+  ${CMAKE_CURRENT_BINARY_DIR}/wayland-ext-idle-notify-v1-server-protocol.h
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-fake-input-client-protocol.h
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-fake-input-server-protocol.h
   ${CMAKE_CURRENT_BINARY_DIR}/wayland-idle-client-protocol.h
@@ -386,6 +393,7 @@ set(SERVER_LIB_HEADERS
   fake_input.h
   filtered_display.h
   globals.h
+  idle_notify_v1.h
   idle_inhibit_v1.h
   input_method_v2.h
   kde_idle.h
