feat(server): provide xdg-shell positioner class
This pools all positioner data for popups, reducing the size of the public API.
It also simplifies our push afterwards for xdg-shell v3.

BREAKING CHANGE: xdg-shell popup API uses a positioner object

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -440,6 +440,7 @@ set(SERVER_LIB_HEADERS
   xdg_foreign.h
   xdg_shell.h
   xdg_shell_popup.h
+  xdg_shell_positioner.h
   xdg_shell_surface.h
   xdg_shell_toplevel.h
 )
