--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,22 +1,22 @@
 include(ECMMarkAsTest)
 
-# find_package(Qt5Core ${QT_MIN_VERSION} CONFIG REQUIRED COMPONENT Private _check_private)
-include_directories(SYSTEM ${Qt5Core_PRIVATE_INCLUDE_DIRS})
+include_directories(SYSTEM ${QtCore_PRIVATE_INCLUDE_DIRS})
 set(testServer_SRCS waylandservertest.cpp)
 add_executable(testServer ${testServer_SRCS})
 target_link_libraries(testServer
+  Qt6::GuiPrivate
   Wrapland::Server
 )
 ecm_mark_as_test(testServer)
 
-find_package(Qt5Widgets ${QT_MIN_VERSION} CONFIG QUIET)
-if(Qt5Widgets_FOUND)
+find_package(Qt6Widgets ${QT_MIN_VERSION} CONFIG QUIET)
+if(Qt6Widgets_FOUND)
   set(testRenderingServer_SRCS renderingservertest.cpp)
   add_executable(testRenderingServer ${testRenderingServer_SRCS})
   target_link_libraries(testRenderingServer
     Wrapland::Server
-    Qt5::Concurrent
-    Qt5::Widgets
+    Qt6::Concurrent
+    Qt6::Widgets
   )
   ecm_mark_as_test(testRenderingServer)
 endif()
@@ -29,7 +29,7 @@ ecm_mark_as_test(copyClient)
 
 add_executable(pasteClient pasteclient.cpp)
 target_link_libraries(pasteClient
-  Qt5::Concurrent
+  Qt6::Concurrent
   Wrapland::Client
 )
 ecm_mark_as_test(pasteClient)
@@ -48,16 +48,16 @@ if(HAVE_LINUX_INPUT_H)
 
   add_executable(qtwayland-integration-test qtwaylandintegrationtest.cpp)
   target_link_libraries(qtwayland-integration-test
-    Qt5::Core
-    Qt5::Gui
+    Qt6::Core
+    Qt6::Gui
     Wrapland::Client
   )
   ecm_mark_as_test(qtwayland-integration-test)
 
   add_executable(subsurface-test subsurfacetest.cpp)
   target_link_libraries(subsurface-test
-    Qt5::Core
-    Qt5::Gui
+    Qt6::Core
+    Qt6::Gui
     Wrapland::Client
   )
   ecm_mark_as_test(subsurface-test)
@@ -69,32 +69,32 @@ target_link_libraries(shadowTest
 )
 ecm_mark_as_test(shadowTest)
 
-if(Qt5Widgets_FOUND)
+if(Qt6Widgets_FOUND)
   add_executable(dpmsTest dpmstest.cpp)
   target_link_libraries(dpmsTest
     Wrapland::Client
-    Qt5::Widgets
+    Qt6::Widgets
   )
   ecm_mark_as_test(dpmsTest)
 endif()
 
 add_executable(plasmasurface-test plasmasurfacetest.cpp)
 target_link_libraries(plasmasurface-test
-  Qt5::Gui
+  Qt6::Gui
   Wrapland::Client
 )
 ecm_mark_as_test(plasmasurface-test)
 
 add_executable(xdgforeign-test xdgforeigntest.cpp)
 target_link_libraries(xdgforeign-test
-  Qt5::Gui
+  Qt6::Gui
   Wrapland::Client
 )
 ecm_mark_as_test(xdgforeign-test)
 
 add_executable(xdg-test xdgtest.cpp)
 target_link_libraries(xdg-test
-  Qt5::Gui
+  Qt6::Gui
   Wrapland::Client
 )
 ecm_mark_as_test(xdg-test)
