ci: specify clang as C compiler
This is required since recently. Fixes the build with sanitizers.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ Sanitized:
   extends: .common-build
   variables:
     CMAKE_ARGS: -DECM_ENABLE_SANITIZERS='address;leak;undefined'
+                -DCMAKE_C_COMPILER=clang
                 -DCMAKE_CXX_COMPILER=clang++
 
 
