ci: run sanitized tests without odr violation check
This is necessary due to odr violations in the protocol code being generated by
the wayland-scanner.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,6 +115,9 @@ Sanitized Tests:
   needs:
     - job: Sanitized
       artifacts: true
+  script:
+    - export ASAN_OPTIONS=detect_odr_violation=0
+    - !reference [.tests, script]
 
 
 ####################################################################################################
