refactor(server): usg gsl::not_null
Link against Microsoft GSL library and use its not_null template type to ensure
several pointers are always set to a value.

--- a/WraplandConfig.cmake.in
+++ b/WraplandConfig.cmake.in
@@ -2,5 +2,6 @@
 
 include(CMakeFindDependencyMacro)
 find_dependency(Qt6Gui @REQUIRED_QT_VERSION@)
+find_dependency(Microsoft.GSL)
 
 include("${CMAKE_CURRENT_LIST_DIR}/WraplandTargets.cmake")
