build: set version through project command
This is the canonical way to do it in a CMake project. The release scripts
need to be adapted. But we'll do this later on as we'll move away from
branching off at beta.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(Wrapland)
-set(PROJECT_VERSION "0.527.80")
-set(PROJECT_VERSION_MAJOR 0)
+project(Wrapland VERSION 0.527.80)
 
 # ECM setup
 include(FeatureSummary)
