--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -1,87 +1,46 @@
-name: Validate code change
-on: push
+name: Main Checks
+on:
+  - push
+  - pull_request
 jobs:
   message-lint:
-    name: Commit Message Lint
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Lint commit messages
-        uses: ./.github/actions/message-lint
-        with:
-          upstream-repo: 'https://github.com/winft/wrapland.git'
-          source-branch: ${{ github.ref_name }}
+    uses: ./.github/workflows/commit-lint.yml
+    with:
+      upstream-repo: https://github.com/winft/wrapland.git
 
   clang-format:
-    name: Clang-Format
-    runs-on: ubuntu-latest
-    container:
-      image: archlinux
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - run: pacman -Sy --needed --quiet --noconfirm clang python
-      - run: bash tooling/analysis/clang-format.sh
+    uses: ./.github/workflows/clang-format.yml
 
   build:
-    name: Build
-    runs-on: ubuntu-latest
-    container:
+    uses: ./.github/workflows/build.yml
+    with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Build
-        uses: ./.github/actions/build
-        with:
-          artifact-name: 'build'
 
   build-sanitized:
-    name: Build with Sanitizers
-    runs-on: ubuntu-latest
-    container:
-        image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Build
-        uses: ./.github/actions/build
-        with:
-          artifact-name: 'build-sanitized'
-          is-sanitized: 'true'
+    uses: ./.github/workflows/build.yml
+    with:
+      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      is-sanitized: true
+      artifact-name: build-sanitized
+
+  install:
+    uses: ./.github/workflows/install.yml
+    needs: build
+    with:
+      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
 
   test:
-    name: Tests
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/test.yml
     needs: build
-    container:
+    with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build
-      - name: Run tests
-        uses: ./.github/actions/test
 
   test-sanitized:
-    name: Tests With Sanitizers
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/test.yml
     needs: build-sanitized
-    container:
+    with:
       image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: build-sanitized
-      - name: Run tests
-        uses: ./.github/actions/test
+      artifact-name: build-sanitized
 
   clang-tidy:
     name: Clang-Tidy
