build: package with CPack
Similar to COMO we now provide a package with CPack. This will be rebuilt on CI
once per week so we can use it at any point in time in other CI pipelines.

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -60,6 +60,13 @@ jobs:
       - name: Run Clang-Tidy
         run: bash tooling/analysis/clang-tidy.sh build
 
+  package:
+    uses: ./.github/workflows/package.yml
+    needs: build
+    with:
+      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      package-name: wrapland
+
   ci-image-rebuild:
     name: Trigger CI Image Rebuild
     runs-on: ubuntu-latest
