ci: set image type depending on branch
For stable builds we need to use the stable kf image.

--- a/.github/workflows/change.yml
+++ b/.github/workflows/change.yml
@@ -3,6 +3,22 @@ on:
   - push
   - pull_request
 jobs:
+  get:
+    runs-on: ubuntu-latest
+    outputs:
+      image: ${{ steps.setvar.outputs.result }}
+    env:
+      prefix: registry.gitlab.com/kwinft/ci-images/archlinux/kf
+      result: ''
+      branch: ''
+    steps:
+      - run: echo "branch=${{ github.head_ref || github.ref_name }}" >> $GITHUB_ENV
+      - run: echo "result=${{ env.prefix }}-master" >> $GITHUB_ENV
+      - if: startsWith(env.branch, 'Plasma/') || github.ref_type == 'tag'
+        run: echo "result=${{ env.prefix }}-stable" >> $GITHUB_ENV
+      - id: setvar
+        run: echo "result=${{ env.result }}" >> $GITHUB_OUTPUT
+
   message-lint:
     uses: ./.github/workflows/commit-lint.yml
     with:
@@ -13,41 +29,45 @@ jobs:
 
   build:
     uses: ./.github/workflows/build.yml
+    needs: get
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
 
   build-sanitized:
     uses: ./.github/workflows/build.yml
+    needs: get
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
       is-sanitized: true
       artifact-name: build-sanitized
 
   install:
     uses: ./.github/workflows/install.yml
-    needs: build
+    needs: [build, get]
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
 
   test:
     uses: ./.github/workflows/test.yml
-    needs: build
+    needs:
+      - build
+      - get
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
 
   test-sanitized:
     uses: ./.github/workflows/test.yml
-    needs: build-sanitized
+    needs: [build-sanitized, get]
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
       artifact-name: build-sanitized
 
   clang-tidy:
     name: Clang-Tidy
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, get]
     container:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -62,7 +82,7 @@ jobs:
 
   package:
     uses: ./.github/workflows/package.yml
-    needs: build
+    needs: [build, get]
     with:
-      image: registry.gitlab.com/kwinft/ci-images/archlinux/frameworks-master
+      image: ${{ needs.get.outputs.image }}
       package-name: wrapland
